# Sentiment-Analisys

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
doc/: Meeting notes until 09-27.txt
src/: Analyser.cpp  Analyser.h  Arguments.cpp  Arguments.h  BowAnalyser.cpp  Database.cpp  Database.h  EmotionCombination.cpp  EmotionRearangment.cpp  EmotionalScore.cpp  Emotions.h  FileIO.cpp  IOManager.cpp  IOManager.h  Keyword.cpp  Keyword.h  PdfOutput.cpp  PdfSettings.h  SentimentAnalysis.cpp  SentimentAnalysis.sln  SentimentAnalysis.vcxproj  SentimentAnalysis.vcxproj.filters  TerminalIO.cpp  Text.cpp  Text.h  Topic.cpp  Topic.h  TopicAnalyser.cpp  Utilities.cpp  Utilities.h  VaderAnalyser.cpp  WebIO.cpp  database.json
src/lib/CURL/: libcurl.la  libcurl_a.lib
src/lib/haru/: hpdf.lib
srcTests/: srcTests.vcxproj  srcTests.vcxproj.filters  test.cpp
timelogs/: Time-sheet.xlsx
